# mailkit

./: Cargo.toml  LICENSE  README.md
src/: email_sender.rs  json.rs  lib.rs  simple_logger.rs
tests/: bulk_async.rs  email_sender.rs  json.rs  simple_logger.rs
