[package]
name = "mailkit"
version = "0.1.0"
edition = "2024"

[dependencies]
lettre = { version = "0.11.17", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
tokio = { version = "1.45.1", features = ["full"] }
tera = "1.20.0"
log = "0.4.27"
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
